--- a/nlme.html
+++ b/nlme.html
@@ -201,7 +201,7 @@ for (nf in 0.1^(1:17))
 ## [1] 0.0000001 0.5041108
 ## [1] 0.00000001 0.50411117
 ## [1] 0.000000001 0.504110806
-## [1] 0.0000000001 0.5041108898
+## [1] 0.0000000001 0.5041108895
 ## [1] 1.000000e-11 5.041116e-01
 ## [1] 1.000000e-12 5.041205e-01
 ## [1] 1.000000e-13 5.041962e-01
@@ -209,9 +209,30 @@ for (nf in 0.1^(1:17))
 ## [1] 1.000000e-15 4.847916e-01
 ## [1]  1.000000e-16 -6.561312e-01
 ## [1]  1.000000e-17 -8.241628e-01</code></pre>
-<p>Guts of the estimation procedure for the estimated variance-covariance matrices of the fixed effects are in <code>nlme:::MEestimate</code>, and further embedded in C code <code>.C(mixed_estimate,...)</code>. I suspect that the proximal problem is that the residual standard error underflows to zero and something bad happens to the linear algebra.</p>
-<pre class="r"><code>print(packageVersion(&quot;nlme&quot;))</code></pre>
-<pre><code>## [1] '3.1.127'</code></pre>
+<p>Note from Ben Bolker: Guts of the estimation procedure for the estimated variance-covariance matrices of the fixed effects are in <code>nlme:::MEestimate</code>, and further embedded in C code <code>.C(mixed_estimate,...)</code>. I suspect that the proximal problem is that the residual standard error underflows to zero and something bad happens to the linear algebra.</p>
+<pre class="r"><code>sessionInfo()</code></pre>
+<pre><code>## R version 3.2.5 (2016-04-14)
+## Platform: x86_64-pc-linux-gnu (64-bit)
+## Running under: Ubuntu 14.04.4 LTS
+## 
+## locale:
+##  [1] LC_CTYPE=en_CA.UTF-8       LC_NUMERIC=C              
+##  [3] LC_TIME=en_CA.UTF-8        LC_COLLATE=en_CA.UTF-8    
+##  [5] LC_MONETARY=en_CA.UTF-8    LC_MESSAGES=en_CA.UTF-8   
+##  [7] LC_PAPER=en_CA.UTF-8       LC_NAME=C                 
+##  [9] LC_ADDRESS=C               LC_TELEPHONE=C            
+## [11] LC_MEASUREMENT=en_CA.UTF-8 LC_IDENTIFICATION=C       
+## 
+## attached base packages:
+## [1] stats     graphics  grDevices utils     datasets  base     
+## 
+## other attached packages:
+## [1] nlme_3.1-127    rmarkdown_0.9.6
+## 
+## loaded via a namespace (and not attached):
+##  [1] magrittr_1.5    formatR_1.2     tools_3.2.5     htmltools_0.2.6
+##  [5] stringi_0.4-1   grid_3.2.5      knitr_1.12.3    methods_3.2.5  
+##  [9] stringr_1.0.0   digest_0.6.8    lattice_0.20-33 evaluate_0.9</code></pre>
 <div class="footnotes">
 <hr />
 <ol>
